2008-01-16  Loic Fosse  <fosse@gostai.com>

	Reorder syntax errors.
	* src/ast/ast.yml: Add a Message node to carry errors and warnings.
	Nary can now contain Stmt and Message.
	* src/ast/cloner.hxx: Remove useless specialization.
	* src/parser/uparser.cc, src/parser/uparser.hh: Store all warnings
	and errors, not only the lastest.
	* src/runner/runner.cc, src/runner/runner.hh: Add management of
	Message node.
	* src/uconnection.cc: When errors or warnings are encountered, push
	them into the Nary instead of printing them directly.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Code cleanup.
	* src/uobject.cc,
	* src/uobject.hh,
	* src/uvalue-cast.cc,
	* src/uvalue-cast.hh: Restyle.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Code cleanup.
	* src/object/object.cc: Better comments and variable name.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor object_class_print and echo, remove dubious char* usage.
	* src/object/object-class.cc: Here.

2008-01-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a deprecated file.
	* src/uast.hh: Remove.
	* src/Makefile.am: Adjust.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Add documentation following today's discussions.
	* doc/semantics-issues.org: Update documentation.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor code.
	* src/uobject.cc: Factor split_name.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Remove Inherits/Disinherits in yaml.
	* src/ast/ast.yml: Remove Inherits/Disinherits.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Remove obsolete inherits/disinherits.
	* share/urbi/urbi.u: Use addProto instead of inherits.
	* src/parser/ugrammar.y: Remove inherits / disinherits.
	* src/parser/utoken.l: Ditto.

2008-01-14  Samuel Tardieu  <tardieu@gostai.com>

	Use a name unavailable to the user for temporary purpose.
	* src/parser/ugrammar.y: The user cannot enter 'res' so use it.

2008-01-11  Samuel Tardieu  <tardieu@gostai.com>

	Notes on "nil" object.